--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-parallax": "^3.5.1"
+    "react-parallax": "^3.5.1",
+    "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
     "daisyui": "^4.12.11",
