--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-parallax": "^3.5.1",
+    "reactjs-popup": "^2.0.6",
     "sweetalert2": "^11.14.1"
   },
   "devDependencies": {
