--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.5.0",
     "@stripe/react-stripe-js": "^2.8.1",
     "@stripe/stripe-js": "^4.8.0",
     "axios": "^1.7.7",
     "framer-motion": "^11.10.0",
+    "moment": "^2.30.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
